# kde-extraapps

./: .kateproject  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  README  appveyor.yml  boost.sh  doxygen.conf
about-distro/: CMakeLists.txt  README
about-distro/po/: CMakeLists.txt
about-distro/src/: CMakeLists.txt  Module.cpp  Module.h  Module.ui  OSRelease.cpp  OSRelease.h  about-distro.desktop  main.cpp
akregator/: CMakeLists.txt
akregator/configuration/: CMakeLists.txt  akregator_config_advanced.cpp  akregator_config_appearance.cpp  akregator_config_appearance.h  akregator_config_archive.cpp  akregator_config_archive.h  akregator_config_browser.cpp  akregator_config_browser.h  akregator_config_general.cpp  akregator_config_general.h  settings_advanced.cpp  settings_advanced.h  settings_browser.ui
akregator/export/: CMakeLists.txt
akregator/interfaces/: CMakeLists.txt  akregator.kcfg  akregator_export.h  article.h  command.h  feedlistmanagementinterface.h  feedstorage.h  storage.h  storagefactory.h  storagefactoryregistry.h
akregator/plugins/: CMakeLists.txt
akregator/src/: CMakeLists.txt  aboutdata.cpp  abstractselectioncontroller.h  actionmanager.h  actionmanagerimpl.cpp  actionmanagerimpl.h  actions.h  akregator.desktop  akregator_part.cpp  akregator_part.h  akregator_part.rc  akregator_shell.rc  article.cpp  articleformatter.cpp  articleformatter.h  articlelistview.cpp  articlelistview.h  articlemodel.h  articleviewer.cpp  articleviewer.h  deletesubscriptioncommand.cpp  editsubscriptioncommand.cpp  expireitemscommand.cpp  feed.cpp  feed.h  feediconmanager.h  feedlist.cpp  feedlist.h  folder.h  frame.cpp  frame.h  framemanager.cpp  framemanager.h  importfeedlistcommand.cpp  importfeedlistcommand.h  kernel.cpp  loadfeedlistcommand.cpp  loadfeedlistcommand.h  main.cpp  mainwidget.cpp  (+17 more)
ark/: CMakeLists.txt
ark/app/: CMakeLists.txt  ark.desktop.cmake  ark_addtoservicemenu.desktop  ark_dndextract.desktop.cmake  ark_servicemenu.desktop.cmake  batchextract.cpp  extractHereDndPlugin.cpp  main.cpp  mainwindow.cpp  mainwindow.h
ark/kerfuffle/: CMakeLists.txt  adddialog.cpp  adddialog.ui  addtoarchive.cpp  archiveinterface.cpp  archiveinterface.h  cliinterface.cpp  extractiondialog.cpp  extractiondialog.h  extractiondialog.ui  jobs.cpp  kerfufflePlugin.desktop  queries.cpp  settings.kcfgc
ark/part/: CMakeLists.txt  archivemodel.cpp  archiveview.cpp  ark_part.desktop.cmake  arkviewer.cpp  arkviewer.h  infopanel.cpp  infopanel.ui  interface.h  jobtracker.cpp  jobtracker.ui  part.cpp  part.h
ark/plugins/: CMakeLists.txt
bluedevil/: CMakeLists.txt
bluedevil/libbluedevil/: CMakeLists.txt
bluedevil/po/: CMakeLists.txt
bluedevil/src/: CMakeLists.txt
ffmpegthumbs/: CMakeLists.txt  ffmpegthumbnailer.cpp
ffmpegthumbs/ffmpegthumbnailer/: moviedecoder.cpp  moviedecoder.h  videoframe.h  videothumbnailer.cpp
ffmpegthumbs/tests/: CMakeLists.txt
filelight/: CMakeLists.txt  config-filelight.h.cmake
filelight/misc/: CMakeLists.txt  filelight.desktop
filelight/src/: define.h
gwenview/: CMakeLists.txt  config-gwenview.h.cmake
gwenview/app/: CMakeLists.txt  abstractcontextmanageritem.cpp  advancedconfigpage.ui  browsemainpage.cpp  browsemainpage.h  browsemainpage.ui  configdialog.cpp  documentinfoprovider.cpp  fileoperations.cpp  (+39 more)
jovie/: CMakeLists.txt
kcalc/: CMakeLists.txt  TODO  bitbutton.cpp  bitbutton.h  colors.ui  config-kcalc.h.cmake  constants.ui  fonts.ui  general.ui  kcalc.cpp  kcalc.desktop  kcalc.h  kcalc.ui  kcalc_bitset.cpp  kcalc_bitset.h  kcalc_button.cpp  kcalc_button.h  kcalc_const_button.cpp  kcalc_const_menu.cpp  kcalc_const_menu.h  kcalc_core.cpp  kcalc_core.h  kcalcdisplay.cpp  kcalcdisplay.h  stats.cpp
kcharselect/: CMakeLists.txt  KCharSelect.desktop  kcharselectdia.cc
kcolorchooser/: CMakeLists.txt  kcolorchooser.cpp  kcolorchooser.desktop
kcron/: CMakeLists.txt
kdenetwork-filesharing/: CMakeLists.txt
kdeplasma-addons/: CMakeLists.txt
kemu/: CMakeLists.txt  Messages.sh  kemu.desktop  kemu.ui  kemumainwindow.cpp  kemumainwindow.h  kemuui.rc  main.cpp
kfilemetadata/: CMakeLists.txt  KFileMetaDataConfig.cmake.in
kfloppy/: CMakeLists.txt  KFloppy.desktop  debug.h  floppy.cpp  floppy.h  format.cpp  format.h
kget/: CMakeLists.txt  TODO  boost.sh  kget.notifyrc  kget_export.h  main.cpp  mainwindow.cpp  mainwindow.h
kmix/: CMakeLists.txt  ConfigureChecks.cmake  kmix.desktop  kmix.notifyrc  kmix_autostart.desktop  kmixd.desktop
kompare/: CMakeLists.txt  SRCBUILD  kompare.desktop  kompare_shell.cpp  kompare_shell.h  kompareurldialog.cpp
krdc/: .directory  CMakeLists.txt  bookmarkmanager.cpp  bookmarkmanager.h  connectiondelegate.cpp  floatingtoolbar.cpp  krdc.desktop  main.cpp  mainwindow.cpp  mainwindow.h  remotedesktopsmodel.cpp  remotedesktopsmodel.h  systemtrayicon.cpp  tabbedviewwidget.cpp
krfb/: .directory  CMakeLists.txt  TODO
kscreen/: CMakeLists.txt
ksnapshot/: CMakeLists.txt  freeregiongrabber.cpp  freeregiongrabber.h  kbackgroundsnapshot.cpp  kbackgroundsnapshot.h  kipiimagecollectionselector.cpp  ksnapshot.cpp  ksnapshot.desktop  ksnapshot.h  ksnapshotobject.cpp  ksnapshotobject.h  ksnapshotpreview.cpp  ksnapshotwidget.ui  main.cpp  regiongrabber.cpp  regiongrabber.h  snapshottimer.cpp  windowgrabber.cpp
ksystemlog/: CMakeLists.txt
ktimer/: CMakeLists.txt  ktimer.cpp  ktimer.desktop  ktimer.h  main.cpp  prefwidget.ui
kuassel/: .directory  CMakeLists.txt  INSTALL  Messages.sh  version.h.in
kuser/: CMakeLists.txt  README  TODO  globals.h  ku_adduser.cpp  ku_config.h.cmake  ku_configdlg.cpp  ku_configdlg.h  ku_deluser.cpp  ku_editgroup.cpp  ku_editgroup.h  ku_edituser.cpp  ku_edituser.h  ku_filessettings.ui  ku_generalsettings.ui  ku_global.cpp  ku_group.cpp  ku_group.h  ku_groupfiles.cpp  ku_groupmodel.cpp  ku_groupmodel.h  ku_mainview.cpp  ku_mainwidget.cpp  ku_misc.cpp  ku_misc.h  ku_passwordpolicy.ui  ku_pwdlg.cpp  ku_selectconn.cpp  ku_user.cpp  ku_user.h  ku_userfiles.cpp  ku_usermodel.cpp  ku_usermodel.h  ku_usersystem.cpp  kuser.desktop  kuser.kcfg  sid.cpp
kvkbd/: CMakeLists.txt
(+7136 files in other folders)
